styles/main.css
html {
  width: 100%;
  height: 100%;
  background: #f1f1f1;
}

body {
  position: absolute;
  height: 85%;
  min-height: 800px;
  width: 90%;
  box-shadow: 0px 0px 5px gainsboro;
  max-width: 1400px;
  margin: auto;
  right: 0;
  left: 0;
  margin-bottom: 60px;
  margin-top: 60px;
  background: white;
}

.home {
  width: 100%;
  height: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.home-intro {
  width: 542px;
  z-index: 1;
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

.intro-img {
  width: 180px;
  height: 180px;
  background: url('../src/profile.jpg');
  background-size: cover;
  background-position: -75px;
  border-radius: 50%;
  box-shadow: 4px 4px 25px #9c9c9c;
}

.intro-paragraph {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  -ms-flex-pack: distribute;
      justify-content: space-around;
}

.intro-paragraph p {
  width: 310px;
  color: gray;
  font-size: 14px;
  line-height: 20px;
  font-family: SegoeUI, Segoe UI;
}

.offer button,
.lectures button {
  position: absolute;
  background: rgba(255,255,255,0.9);
  padding: 13px 17px;
  border: solid 1px gainsboro;
  border-radius: 6px;
  color: gray;
  font-size: 14px;
  font-family: SegoeUI, Segoe UI;
}

.intro-paragraph button {
  margin-top: 25px;
  position: relative;
  background: rgba(255,255,255,0.9);
  width: 115px;
  padding: 13px 17px;
  border: solid 1px gainsboro;
  border-radius: 6px;
  color: gray;
  font-size: 14px;
  font-family: SegoeUI, Segoe UI;
}

.offer button {
  margin-top: 60px;
  right: 0;
}

button:hover,
button:focus {
  background: #079d1a;
  border: none;
  color: white;
}

button:hover {
  cursor: pointer;
}

.home-background {
  width: 650px;
  position: absolute;
  right: 0;
  bottom: 0;
}

@media (max-width: 1390px) {
  .home-intro {
    margin-top: 215px;
  }
}

@media (max-width: 885px) {
  .home-intro {
    margin-top: 120px;
  }
}

@media(max-width: 722px) {
  .home-background {
    width: 100%;
    left: 0;
  }
}

@media(max-width: 700px) {
  .home-intro {
    width: inherit;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
  }
  .intro-img {
    margin-top: -28px;
    margin-bottom: 25px;
  }
  .intro-paragraph {
    margin-left: 20px;
  }
}

.offer {
  width: 100%;
  height: 100%;
}

.navbar {
  font-family: SegoeUI, Segoe UI;
  font-weight: lighter;
  color: #079d1a;
  height: 74px;
  font-size: 24px;
  margin: 0px 32px;
  padding: 26px 0px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  border-bottom: solid 2px #f5f5f5;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

.offer-info {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  margin-top: 58px;
  -ms-flex-pack: distribute;
      justify-content: space-around;
}

.canOffer {
  width: 300px;
  font-family: SegoeUI, Segoe UI;
  color: #b3b3b3;
  z-index: 1;
}

.canOffer p,
.enrollment p {
  font-size: 15px;
  padding: 10px 0px 0px 0px;
  line-height: 19px;
  font-weight: lighter;
}

.enrollment p {
  margin-top: -2px;
}

.enrollment span {
  color: #079d1a;
  font-weight: bold;
}

.canOffer h1,
.enrollment h1 {
  padding-bottom: 7px;
  margin-bottom: -3px;
  font-size: 17px;
  color: gray;
  border-bottom: solid 2px #f5f5f5;
}

.enrollment h2 {
  color: gray;
  width: 430px;
  padding: 15px 0px 6px 0px;
  font-size: 15px;
  border-bottom: solid 2px #f5f5f5;
}

.enrollment {
  width: 600px;
  font-family: SegoeUI, Segoe UI;
  color: #b3b3b3;
  position: relative;
  z-index: 1;
}

.offer-background {
  left: 0;
  bottom: 0;
  position: absolute;
  width: 650px;
  margin: 20px;
}

.star {
  margin-top: 20px;
}

@media (max-width: 1160px) {
  html {
    -webkit-box-align: start;
        -ms-flex-align: start;
            align-items: flex-start;
  }
  .offer-background {
  	margin: 0px;
    margin-top: 40px;
    position: relative;
    margin-left: calc((100% - 700px)/2);
  	width: 700px;
  }
  .canOffer {
    width: 600px;
    margin-bottom: 50px;
  }
  .offer-info {
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
  }
}

.phone-view {
  display: none;
}

@media (max-width: 800px) {
  .offer-background {
    width: 100%;
    margin: 0px;
    margin-top: 40px;
  }
}

@media (max-width: 750px) {
  .canOffer {
    width: 90%;
  }
  .enrollment {
    width: 90%;
  }
  .enrollment h2 {
    width: 90%;
  }
  .navbar {
    width: 90%;
    margin: auto;
  }
  .phone-view {
    display: block;
  }
  .desktop-view {
    display: none;
  }
}

@media (max-width: 500px) {
  .offer button {
    margin-top: 40px;
  }
  .canOffer {
    margin-bottom: 40px;
  }
  .offer-info {
    margin-top: 40px;
  }
}

.lectures {
  font-family: SegoeUI, Segoe UI;
  color: #b3b3b3;
  height: 100%;
  position: relative;
  z-index: 1;
}

.lectures h2 {
  color: gray;
  padding: 15px 0px 6px 0px;
  font-size: 19px;
}

.lectures .lecture-info {
  width: 600px;
  margin-top: 30px;
}

.lectures .lecture-content {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  height: calc(100% - 190px);
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
}

.lectures .lecture-info-header {
  border-bottom: solid 2px gainsboro;
  margin-bottom: 10px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

.lectures .lecture-info-content {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}

.lecture-series p,
.lecture-sched p {
  font-size: 14px;
  line-height: 18px;
}

.lecture-content img {
  width: 100%;
  margin-top: 70px;
  padding: 20px;
  max-width: 650px;
  margin-right: -50px;
}

.lectures button {
  position: absolute;
  margin-top: 28px;
}

.lectures span {
  color: gray;
  font-style: italic;
  display: none;
}

@media (max-width: 1390px) {
  body {
    height: initial;
  }
  .lectures {
    height: 910px;
  }
  .lecture-content img {
    margin: auto;
    position: absolute;
    right: 0;
    left: 0;
    margin-top: 70px;
  }
  .lectures .lecture-info {
    margin: auto;
    margin-top: 30px;
  }
  .lectures .lecture-content {
    height: auto;
    display: block;
    /*-webkit-box-orient: vertical;
    -webkit-box-direction: normal;
        -ms-flex-direction: column;
            flex-direction: column;*/
  }
}

@media (max-width: 735px) {
  .lectures .lecture-info {
    width: 90%;
  }
}

@media (max-width: 660px) {
  .lecture-sched {
    display: none;
  }
  .lectures span {
    display: inline;
  }
  .lectures h2:nth-child(2) {
    display: none;
  }
  .lectures {
    height: 855px;
  }
}

